[gd_scene load_steps=5 format=3 uid="uid://dacc7fl1is5hr"]

[ext_resource type="Script" uid="uid://dk3egwpff6484" path="res://addons/ScenePreview/saving_preview.gd" id="1_e08cg"]
[ext_resource type="Shader" uid="uid://bmkh0v38gqal0" path="res://Assets/Shaders/simple_erase_mask_color.gdshader" id="2_yea21"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b147g"]
shader = ExtResource("2_yea21")
shader_parameter/mask_color = Color(0.3, 0.3, 0.3, 1)
shader_parameter/threshold = 0.01

[sub_resource type="ViewportTexture" id="ViewportTexture_mmtut"]
viewport_path = NodePath("MainViewport")

[node name="SavingPreview" type="Node2D"]
script = ExtResource("1_e08cg")

[node name="MainViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="MainSprite" type="Sprite2D" parent="MainViewport"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_b147g")
centered = false

[node name="FinalSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = SubResource("ViewportTexture_mmtut")
centered = false
